--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
     "mssql": "^8.1.3",
     "nodemon": "^2.0.19"
