--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongo": "^0.1.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
